# data_science_template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .gitignore  Makefile  pyproject.toml
{{cookiecutter.project_name}}/docs/: modules.md
