[tool.poetry]
name = "data-science-template"
version = "0.1.0"
description = ""
authors = ["Christoph Vos <christoph.a.vos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.4.1.post1"
polars = "^0.20.16"
pyarrow = "^15.0.2"
river = "^0.21.0"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
plotly = "^5.20.0"
nbformat = "^5.10.3"
networkx = "^3.2.1"
imbalanced-learn = "^0.12.0"
statsmodels = "^0.14.1"
tqdm = "^4.66.2"
umap-learn = "^0.5.5"
optuna = "^3.6.0"
explainerdashboard = "^0.4.7"
Sphinx = "^7.2.6"
autogluon = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
