[project]
name = "data-science-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogluon>=1.1.1",
    "deepchecks>=0.18.1",
    "dvc>=3.56.0",
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "plotly-resampler>=0.10.0",
    "polars>=1.14.0",
    "ray[data,serve,train,tune]>=2.10.0",
]
